Bug 303230 - '>' symbol replaced by '>' in the output window when building with ConTeXt
Summary: '>' symbol replaced by '>' in the output window when building with ConTeXt
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: user interface (other bugs)
Version First Reported In: trunk-kde4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-09 11:20 UTC by prash
Modified: 2012-07-14 19:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description prash 2012-07-09 11:20:01 UTC
When building with ConTeXt, my output window is supposed to show something like this:
-------------------------------------------
mkiv lua stats  > used config file          - selfautoparent:/texmf/web2c/texmfcnf.lua
mkiv lua stats  > used cache path           - /home/prash/texmf-cache/luatex-cache/context/5fe67e0bfe781ce0dde776fb1556f32e
mkiv lua stats  > resource resolver         - loadtime 0.018 seconds, 0 scans with scantime 0.000 seconds, 0 shared scans, 34 found files, scanned paths: 
mkiv lua stats  > stored bytecode data      - 306 modules, 65 tables, 371 chunks
mkiv lua stats  > cleaned up reserved nodes - 54 nodes, 9 lists of 435
mkiv lua stats  > node memory usage         - 4 glue, 2 kern, 3 penalty, 39 attribute, 97 glue_spec, 7 attribute_list
mkiv lua stats  > node list callback tasks  - 6 unique task lists, 6 instances (re)created, 3949 calls
mkiv lua stats  > h-node processing time    - 0.464 seconds including kernel
mkiv lua stats  > attribute processing time - 0.089 seconds front- and backend
mkiv lua stats  > used backend              - pdf (backend for directly generating pdf output)
-------------------------------------------
Instead, it shows this:
-------------------------------------------
mkiv lua stats  > used config file          - selfautoparent:/texmf/web2c/texmfcnf.lua
mkiv lua stats  > used cache path           - /home/prash/texmf-cache/luatex-cache/context/5fe67e0bfe781ce0dde776fb1556f32e
mkiv lua stats  > resource resolver         - loadtime 0.018 seconds, 0 scans with scantime 0.000 seconds, 0 shared scans, 34 found files, scanned paths: 
mkiv lua stats  > stored bytecode data      - 306 modules, 65 tables, 371 chunks
mkiv lua stats  > cleaned up reserved nodes - 54 nodes, 9 lists of 435
mkiv lua stats  > node memory usage         - 4 glue, 2 kern, 3 penalty, 39 attribute, 97 glue_spec, 7 attribute_list
mkiv lua stats  > node list callback tasks  - 6 unique task lists, 6 instances (re)created, 3949 calls
mkiv lua stats  > h-node processing time    - 0.490 seconds including kernel
mkiv lua stats  > attribute processing time - 0.078 seconds front- and backend
mkiv lua stats  > used backend              - pdf (backend for directly generating pdf output)
-------------------------------------------
I see HTML codes when the tool itself does not output such codes.

Reproducible: Always

Steps to Reproduce:
1. Compile any ConTeXt file using 'context --nonstopmode  '%source'
2.
3.
Actual Results:  
The output contains HTML code for '>'

Expected Results:  
'>' characters emitted by the compiler should be shown as-is.
Comment 1 Michel Ludwig 2012-07-14 19:45:29 UTC
Git commit aecfddbb45e7e3c9552af366733614770791ba6f by Michel Ludwig.
Committed on 14/07/2012 at 21:42.
Pushed by mludwig into branch '2.1'.

Don't automatically replace '<' with "&lt;" ('>' with "&gt") any more

QTextEdit now seems to correctly recognize that the overall text is not HTML.

M  +2    -3    src/widgets/outputview.cpp

http://commits.kde.org/kile/aecfddbb45e7e3c9552af366733614770791ba6f
Comment 2 Michel Ludwig 2012-07-14 19:45:30 UTC
Git commit 1e7959c1f9462945b82cfdd0610d3e20771b4700 by Michel Ludwig.
Committed on 14/07/2012 at 21:42.
Pushed by mludwig into branch 'master'.

Don't automatically replace '<' with "&lt;" ('>' with "&gt") any more

QTextEdit now seems to correctly recognize that the overall text is not HTML.

M  +2    -3    src/widgets/outputview.cpp

http://commits.kde.org/kile/1e7959c1f9462945b82cfdd0610d3e20771b4700