Don't automatically replace '<' with "&lt;" ('>' with "&gt") any more

QTextEdit now seems to correctly recognize that the overall text is not HTML.

BUG: 303230